--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 
     <label></label>
     <input type="Password" name="Pass" class="inputText" placeholder="Password">
-    
+
     <br><br>
+
+    <input type="button" name="log" id="logbutton" value="login"
+
 
     
 
