--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
 
             <br><br>
 
-            <input type="button" name="sumbit" id="sumbitbutton" value="sumbit" onclick="myselect()">
-
-
+            <input type="button" name="log" id="logbutton" value="login" onclick="mySelect()">
+            <br><br>
 
         </form>
 
 
-
+<long src="./login.js"></long>
 
 
 </body>
