--- a/home.html
+++ b/home.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>page</title>
 </head>
 <body>
+
+    <nav>
+        <menu>
+          <li>
+            <a href="#">
+              <span class="fa fa-twitter"></span>
+              <span>twitter</span>
+            </a>
+          </li>
+          <li id="at">
+            <a href="#">
+              <span class="fa fa-github"></span>
+              <span>github</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="fa fa-facebook"></span>
+              <span>facebook</span>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span class="fa fa-google-plus"></span>
+              <span>google+</span>
+            </a>
+          </li>
+        </menu>
+        <div class="ribbon left"></div>
+        <div class="ribbon right"></div>
+      </nav>
     
 </body>
 </html>
