--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 
 </head>
+
 <body>
 
     <u>
@@ -18,26 +19,19 @@
     </u>
     <br><br>
 
-    <div id="div1">
-        <form name="loginForm" method="post" action="target.html">
-
-            
-            Email &nbsp <input type="text" name="Email" id="email"/>
-
-            <br><br>
-
-            Password &nbsp &nbsp<input type="password" name="password" id="password"/>&nbsp
-            <br><br>
-            <button onclick="addLogin()">Login</button>
-
-            <br><br>
-
-        
-
-        </form>
+    Username &nbsp <input type="text" id="txt" placeholder="Username">
 
 
-<script src="./login.js"></script>
+    <br><br>
+    Password &nbsp <input type="text" id="val" placeholder="Password">
+
+    <br><br>
+    <button onclick="addLogin()">Login</button>
+
+    <br><br>
+
+
+    <script src="./login.js"></script>
 
 
 </body>
