--- a/home.html
+++ b/home.html
@@ -5,6 +5,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
 <body>
+    <div class="wrap">
+    <div class="ribbon">
+  <i></i>
+  <i></i>
+  <i></i>
+  <i></i>
+ </div>
     
 
     </body>
