--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
         
     </div><br><br><br>
 
-    <div id="auto"></div>
+    <div id="display"></div>
 
 <script src="./home.js"></script>
 
