--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </u>
     <br><br>
 
-    Username &nbsp <input type="text" id="txt" placeholder="Username">
+    Username &nbsp <input type="text" id="txt" placeholder="Username"> 
 
 
     <br><br>
-    Password &nbsp <input type="text" id="val" placeholder="Password">
+    Password &nbsp <input type="password" id="val" placeholder="Password">
 
     <br><br>
     <button onclick="addLogin()">Login</button>
