--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <br><br>
     Password &nbsp <input type="password" id="val" placeholder="Password">
 
-   
+    <br><br>
+    <button onclick="addLogin()">Login</button>
+
+    
 
 
 </body>
