--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     Password &nbsp <input type="password" id="val" placeholder="Password">
 
     <br><br>
-    <button onclick="addLogin()">Login</button>
-
+    
+    <button type="button"><a class="btn btn-primary" href="home.html" onclick="addLogin()" role="button">Login</a></button>
     
 
 
