--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
         <h1>Work my-JavaScript-test project</h1>
     </u>
     <br><br>
+    <div class="container">
 
-    Username &nbsp <input type="text" id="txt" placeholder="Username"> 
+        Username &nbsp <input type="text" id="txt" placeholder="Username">
 
 
-    <br><br>
-    Password &nbsp <input type="password" id="val" placeholder="Password">
+        <br><br>
+        Password &nbsp <input type="password" id="val" placeholder="Password">
 
-    <br><br>
-    
-    <button type="button"><a class="btn btn-primary" href="home.html" onclick="addLogin()" role="button">Login</a></button>
-    
+        <br><br>
+        <button onclick="addLogin()">Login</button>
 
+    </div>
+
+    <script src="./login.js"></script>
 
 </body>
 
